fix favorite state

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/product_sans_bold"
         android:text="@string/search_result"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/svSearchResult"
         app:layout_constraintStart_toStartOf="@+id/svSearchResult"
@@ -42,7 +42,7 @@
         android:background="@drawable/background_search"
         android:focusable="false"
         android:iconifiedByDefault="false"
-        android:queryHint="Search Github User..."
+        android:queryHint="@string/query_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSearchResult" />
@@ -51,11 +51,11 @@
         android:id="@+id/tvNullData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/product_sans_regular"
         android:padding="16dp"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/Error"
         android:textSize="24sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,11 +67,12 @@
         android:id="@+id/searchSpinner"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        app:lottie_colorFilter="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/svSearchResult"
-        app:lottie_rawRes="@raw/loader_spinner"
+        app:lottie_rawRes="@raw/magnifier"
         tools:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
