--- a/app/src/main/res/xml/activity_search_detail_user_scene.xml
+++ b/app/src/main/res/xml/activity_search_detail_user_scene.xml
@@ -15,7 +15,7 @@
                 motion:percentX="0.5"
                 motion:percentY="0.5" />
         </KeyFrameSet>
-        <OnSwipe motion:touchAnchorId="@+id/tvSearchDetail" />
+        <OnSwipe motion:touchAnchorId="@+id/vpSearchDetail" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
