--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragmentFollowers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.FollowersFragment" >
@@ -10,6 +9,7 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieFollowersSpinner"
         android:layout_width="wrap_content"
+        app:lottie_colorFilter="@color/colorAccent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
