--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragmentFollowers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.FollowingFragment" >
@@ -11,6 +10,7 @@
         android:id="@+id/lottieFollowingSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:lottie_colorFilter="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
