--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -96,7 +96,6 @@
         app:layout_constraintTop_toBottomOf="@+id/dividing" />
 
     <TextView
-        android:id="@+id/Repo"
         style="@style/Headline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -105,10 +104,10 @@
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/tvRepo"
         app:layout_constraintStart_toStartOf="@+id/tvRepo"
-        app:layout_constraintTop_toBottomOf="@+id/tvRepo" />
+        app:layout_constraintTop_toBottomOf="@+id/tvRepo"
+        tools:ignore="SmallSp" />
 
     <TextView
-        android:id="@+id/Followers"
         style="@style/Headline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,10 +116,10 @@
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
         app:layout_constraintStart_toStartOf="@+id/tvFollowers"
-        app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
+        app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
+        tools:ignore="SmallSp" />
 
     <TextView
-        android:id="@+id/Following"
         style="@style/Headline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -129,7 +128,8 @@
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
         app:layout_constraintStart_toStartOf="@+id/tvFollowing"
-        app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />
+        app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
+        tools:ignore="SmallSp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
